--- a/style.css
+++ b/style.css
@@ -335,6 +335,48 @@ h3 {
   font-weight: bold;
 }
 
+.error-message {
+  position: fixed;
+  bottom: 40px;
+  right: -20%;
+  border-radius: 6px;
+  background: #CB0000;
+  padding: 10px 40px;
+}
+
+.error-message > p {
+  color: #fff;
+  margin: 0 !important;
+}
+
+.success-message {
+  position: fixed;
+  bottom: 40px;
+  right: -20%;
+  border-radius: 6px;
+  background: #54655E;
+  padding: 10px 40px;
+}
+
+.success-message > p {
+  color: #E6E0CB;
+  margin: 0 !important;
+}
+
+.spinner {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .5);
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (max-width: 768px) {
   #name {
     font-size: 3rem;
